--- a/Project/DISProject/EasyTranslate/WebProject/Pages/_Host.cshtml
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/_Host.cshtml
@@ -6,3 +6,14 @@
 }
 
 <component type="typeof(App)" render-mode="ServerPrerendered" />
+
+
+    <!-- ... -->
+    
+    <!-- Add the <img> tag here -->
+    
+    
+    <!-- ... -->
+    
+    
+
