--- a/Project/DISProject/EasyTranslate/WebProject/Pages/_Layout.cshtml
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/_Layout.cshtml
@@ -12,6 +12,8 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="BlazorProject.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+
+    <title>Easy Translate for Clients</title>
 </head>
 <body>
     @RenderBody()
