--- a/Project/DISProject/EasyTranslate/WebProject/Shared/NavMenu.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorProject</a>
+        <a class="navbar-brand" href="">DIS Project</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,14 +15,24 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
+            <NavLink class="nav-link" href="createtask">
+                <span class="oi oi-heart" aria-hidden="true"></span> New Task
+            </NavLink> 
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
+            <NavLink class="nav-link" href="retrivealllanguages">
+                <span class="oi oi-magnifying-glass" aria-hidden="true"></span> Languages
+            </NavLink> 
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="retrivetarnslatorswithcategories">
+                <span class="oi oi-magnifying-glass" aria-hidden="true"></span> Translators
+            </NavLink> 
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="retrievetasks">
+                <span class="oi oi-person" aria-hidden="true"></span> My Tasks
+            </NavLink> 
         </div>
     </nav>
 </div>
