add to Translators.razor, modify ViewModels

--- a/Project/DISProject/EasyTranslate/WebProject/Pages/NavigationMenu.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/NavigationMenu.razor
@@ -13,7 +13,9 @@
                 <li><a href="/listofratedtarnslators">Retrieve Average Rating of all English, Russian and German Translators</a></li>
                 <li><a href="/listoftranslatorexperience">Retrieve List of German Translators and their Total Experience in Years</a></li>
                 <li><a href="/listoftranslatorsfee">Retrieve List of German Translators and their Fees</a></li>
-                <!-- more links as needed -->
+                <li><a href="/retrievefees">Retrieve List of Fees</a></li>
+                <li><a href="/createreview">Create Review</a></li>
+        <!-- more links as needed -->
     </ul>
 </nav>
 
