--- a/Project/DISProject/EasyTranslate/WebProject/Pages/Translators.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/Translators.razor
@@ -8,12 +8,21 @@
 @using global::Data.ViewModels
 @using Task = System.Threading.Tasks.Task
 @inject ClientFindTranslatorService TranslatorService
+@inject TranslatorCompetenceService CompetenceService
+@inject TranslatorEmploymentService EmploymentService
 
 
 <h5>Get English, German and Russian Translators</h5>
 
 <button class="btn btn-primary" @onclick="GetCertainTranslator">Click me</button>
 <button class="btn btn-primary" @onclick="OnInitialized">Reset</button>
+
+<h5>Get Average Rating of all English, Russian and German Translators</h5>
+@*TODO: make two buttons to click on and get/reset this query. Add function to @code*@
+
+<h5>Retrieve List of German Translators and their Total Experience in Years</h5>
+@*TODO: make a button to click on and get/reset this query. Add function to @code *@
+
 
 
 <h3>All Translators</h3>
@@ -26,23 +35,53 @@ else
 {
     <table class="table">
         <thead>
-        <tr>
-            <th>TranslatorId</th>
-            <th>ContactName</th>
-            <th>Email</th>
-            <th>Language</th>
-            <th>CategoryName</th>
-        </tr>
+        <> 
+             @if (translators.Any(t => t is TranslatorWithLanguage))
+            {
+                <th>TranslatorId</th>
+                <th>ContactName</th>
+                <th>Email</th>
+                <th>Language</th>
+                <th>CategoryName</th>
+            }
+            @if (translators.Any(t => t is RatedTranslator))
+            {
+                <th>ContactName</th>
+                <th>Language</th>
+                <th>AverageRating</th>
+            }
+            @if (translators.Any(t => t is TranslatorExperience))
+            {
+                <th>ContactName</th>
+                <th>TotalExperienceYears</th>
+            }
         </thead>
         <tbody>
         @foreach (var translator in translators)
         {
             <tr>
-                <td>@translator.TranslatorId</td>
-                <td>@translator.ContactName</td>
-                <td>@translator.Email</td>
-                <td>@translator.Language</td>
-                <td>@translator.CategoryName</td>
+               @if (translator is TranslatorWithLanguage)
+               {
+                   var t = (TranslatorWithLanguage)translator;
+                   <td>@t.TranslatorId</td>
+                   <td>@t.ContactName</td>
+                   <td>@t.Email</td>
+                   <td>@t.Language</td>
+                   <td>@t.CategoryName</td>
+               }
+               @if (translator is RatedTranslator)
+               {
+                   var r = (RatedTranslator)translator;
+                   <td>@r.ContactName</td>
+                   <td>@r.Language</td>
+                   <td>@r.AverageRating</td>
+               }
+               @if (translator is TranslatorExperience)
+               {
+                   var e = (TranslatorExperience)translator;
+                   <td>@e.ContactName</td>
+                   <td>@e.TotalExperienceYears</td>
+               }
             </tr>
         }
         </tbody>
@@ -60,5 +99,9 @@ else
     {
         translators = TranslatorService.GetTranslatorsViaDapper();
     }
+
+    // call GetTranslatorsWithRatings();
+    //
+    // call GetTranslatorCompetenceViaDapper();
 }
 
