--- a/Project/DISProject/EasyTranslate/WebProject/Shared/NavMenu.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Shared/NavMenu.razor
@@ -34,6 +34,16 @@
                 <span class="oi oi-person" aria-hidden="true"></span> My Tasks
             </NavLink> 
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="retrievefees">
+                <span class="oi oi-magnifying-glass" aria-hidden="true"></span> View Translator Fees
+            </NavLink> 
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="createreview">
+                <span class="oi oi-plus" aria-hidden="true"></span> Create a Review of Task
+            </NavLink> 
+        </div>
     </nav>
 </div>
 
