Finish the proj, guys!))

--- a/Project/DISProject/EasyTranslate/WebProject/Pages/Index.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/Index.razor
@@ -15,4 +15,5 @@
 <h1>Dear client, welcome to your Easy Translate site!</h1>
 
 <!-- Add the <img> tag here -->
-<img src="/download.jpeg" alt="My Image" />
+<img src="https://www.freeiconspng.com/thumbs/site-internet-
+icon/site-internet-icon-png-27.png" alt="My Image" />
