--- a/Project/DISProject/EasyTranslate/WebProject/Pages/CreateTask.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/CreateTask.razor
@@ -30,63 +30,59 @@
     <EditForm Model="@newTask" OnSubmit="@AddNewTask">
         <div class="row">
             <div class="col-md-6">
-                <label for="ClientId">Client Id:</label>
-                <InputNumber id="ClientId" class="form-control" @bind-Value="newTask.ClientId" />
-            </div>
-            <div class="col-md-6">
                 <label for="TaskType">Task Type:</label>
                 <InputText id="TaskType" class="form-control" @bind-Value="newTask.TaskType" />
             </div>
         </div>
         <div class="row">
-                    <div class="col-md-6">
-                        <label for="Date">Date of Task (as 06/02/2023):</label>
-                        <InputText id="Date" class="form-control" @bind-Value="@Date" />
-                    </div>
-                    <div class="col-md-6">
-                        <label for="StartTime">Start Time (as 12:30:15):</label>
-                        <InputText id="StartTime" class="form-control" @bind-Value="@StartTime" />
-                    </div>
+                <div class="col-md-6">
+                    <label for="Date">Date of Task (as 06/02/2023):</label>
+                    <InputText id="Date" class="form-control" @bind-Value="@Date" />
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <label for="EndTime">End Time (as ¢12:30:15):</label>
-                        <InputText id="EndTime" class="form-control" @bind-Value="@EndTime" />
-                    </div>
-                    <div class="col-md-6">
-                        <label for="Urgent">Urgent (1-Yes/0-No):</label>
-                        <InputNumber id="Urgent" class="form-control" @bind-Value="newTask.Urgent" />
-                    </div>
+                <div class="col-md-6">
+                    <label for="StartTime">Start Time (as 12:30:15):</label>
+                    <InputText id="StartTime" class="form-control" @bind-Value="@StartTime" />
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <label for="Difficult">Difficult (1-Yes/0-No):</label>
-                        <InputNumber id="Difficult" class="form-control" @bind-Value="newTask.Difficult" />
-                    </div>
-                    <div class="col-md-6">
-                        <label for="City">City:</label>
-                        <InputText id="City" class="form-control" @bind-Value="@newTask.CityAddress" />
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <label for="EndTime">End Time (as 12:30:15):</label>
+                    <InputText id="EndTime" class="form-control" @bind-Value="@EndTime" />
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <label for="Street">Street:</label>
-                        <InputText id="Street" class="form-control" @bind-Value="@newTask.Street" />
-                    </div>
-                    <div class="col-md-6">
-                        <label for="HouseNr">House nr:</label>
-                        <InputText id="HouseNr" class="form-control" @bind-Value="@newTask.HouseNr" />
-                    </div>
+                <div class="col-md-6">
+                    <label for="Urgent">Urgent (1-Yes/0-No):</label>
+                    <InputNumber id="Urgent" class="form-control" @bind-Value="newTask.Urgent" />
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <label for="TranslatorId">Translator Id:</label>
-                        <InputNumber id="TranslatorId" class="form-control" @bind-Value="newTask.TranslatorId" />
-                    </div>
-                    <div class="col-md-6">
-                        <label for="LanguageId">Language Id:</label>
-                        <InputNumber id="LanguageId" class="form-control" @bind-Value="newTask.LanguageId" />
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <label for="Difficult">Difficult (1-Yes/0-No):</label>
+                    <InputNumber id="Difficult" class="form-control" @bind-Value="newTask.Difficult" />
+                </div>
+                <div class="col-md-6">
+                    <label for="City">City:</label>
+                    <InputText id="City" class="form-control" @bind-Value="@newTask.CityAddress" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <label for="Street">Street:</label>
+                    <InputText id="Street" class="form-control" @bind-Value="@newTask.Street" />
+                </div>
+                <div class="col-md-6">
+                    <label for="HouseNr">House nr:</label>
+                    <InputText id="HouseNr" class="form-control" @bind-Value="@newTask.HouseNr" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <label for="TranslatorId">Translator Id:</label>
+                    <InputNumber id="TranslatorId" class="form-control" @bind-Value="newTask.TranslatorId" />
+                </div>
+                <div class="col-md-6">
+                    <label for="LanguageId">Language Id:</label>
+                    <InputNumber id="LanguageId" class="form-control" @bind-Value="newTask.LanguageId" />
+                </div>
                 </div>
         
                 <button type="submit" class="btn btn-primary">Submit</button>
@@ -107,6 +103,7 @@
         newTask.DateOfTask = DateTime.Parse(Date); //06/02/2023    
         newTask.StartTime = TimeSpan.Parse(StartTime); //12:30:15
         newTask.EndTime = TimeSpan.Parse(EndTime);
+        newTask.ClientId = 22;
         TaskService.AddTaskViaDapper(newTask);
         showBanner = true;
     }
