--- a/Project/DISProject/EasyTranslate/WebProject/Pages/Translators.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/Translators.razor
@@ -1,7 +1,6 @@
 @page "/retrivetarnslatorswithcategories"
 
 
-
 @using BlazorProject.Data
 @using global::Data.Models
 @using global::Data.Services
@@ -25,7 +24,7 @@
 
 
 
-<h3>All Translators</h3>
+<h3>Translators</h3>
 
 @if (translators == null)
 {
@@ -34,9 +33,8 @@
 else
 {
     <table class="table">
-        <thead>
-        <> 
-             @if (translators.Any(t => t is TranslatorWithLanguage))
+        <thead> 
+            @if (translators.Any(t => t is TranslatorWithLanguage))
             {
                 <th>TranslatorId</th>
                 <th>ContactName</th>
