--- a/Project/DISProject/EasyTranslate/WebProject/Shared/NavMenu.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Shared/NavMenu.razor
@@ -15,8 +15,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="retrievetasks">
+                <span class="oi oi-person" aria-hidden="true"></span> My Tasks
+            </NavLink> 
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="createtask">
-                <span class="oi oi-heart" aria-hidden="true"></span> New Task
+                <span class="oi oi-plus" aria-hidden="true"></span> New Task
+            </NavLink> 
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="createreview">
+                <span class="oi oi-plus" aria-hidden="true"></span> Create Review
             </NavLink> 
         </div>
         <div class="nav-item px-3">
@@ -30,18 +40,8 @@
             </NavLink> 
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="retrievetasks">
-                <span class="oi oi-person" aria-hidden="true"></span> My Tasks
-            </NavLink> 
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="retrievefees">
-                <span class="oi oi-magnifying-glass" aria-hidden="true"></span> View Translator Fees
-            </NavLink> 
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="createreview">
-                <span class="oi oi-plus" aria-hidden="true"></span> Create a Review of Task
+                <span class="oi oi-magnifying-glass" aria-hidden="true"></span>Translator Fees
             </NavLink> 
         </div>
     </nav>
