--- a/Project/DISProject/EasyTranslate/WebProject/Pages/Index.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/Index.razor
@@ -12,8 +12,10 @@
 
 <PageTitle>Welcome to Easy Translate</PageTitle>
 
-<h1>Dear client, welcome to your Easy Translate site!</h1>
+<h1>Home Travel Agency, welcome back to your Easy Translate site!</h1>
 
 <!-- Add the <img> tag here -->
 <img src="https://www.freeiconspng.com/thumbs/site-internet-
 icon/site-internet-icon-png-27.png" alt="My Image" />
+
+
