--- a/Project/DISProject/EasyTranslate/WebProject/Pages/Languages.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/Languages.razor
@@ -35,7 +35,7 @@ else
     </table>
 }
 @code {
-    private IEnumerable<Language> languages;
+    private IEnumerable<Language>? languages;
 
     protected override void OnInitialized()
     {
