--- a/Project/DISProject/EasyTranslate/WebProject/Pages/Translators.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/Translators.razor
@@ -17,10 +17,12 @@
 <button class="btn btn-primary" @onclick="OnInitialized">Reset</button>
 
 <h5>Get Average Rating of all English, Russian and German Translators</h5>
-@*TODO: make two buttons to click on and get/reset this query. Add function to @code*@
+<button class="btn btn-primary" @onclick="GetTranslatorsWithRatings">Click me</button>
+<button class="btn btn-primary" @onclick="OnInitialized">Reset</button>
 
 <h5>Retrieve List of German Translators and their Total Experience in Years</h5>
-@*TODO: make a button to click on and get/reset this query. Add function to @code *@
+<button class="btn btn-primary" @onclick="GetTranslatorCompetence">Click me</button>
+<button class="btn btn-primary" @onclick="OnInitialized">Reset</button>
 
 
 
@@ -34,25 +36,27 @@ else
 {
     <table class="table">
         <thead> 
-            @if (translators.Any(t => t is TranslatorWithLanguage))
-            {
-                <th>TranslatorId</th>
-                <th>ContactName</th>
-                <th>Email</th>
-                <th>Language</th>
-                <th>CategoryName</th>
-            }
-            @if (translators.Any(t => t is RatedTranslator))
-            {
-                <th>ContactName</th>
-                <th>Language</th>
-                <th>AverageRating</th>
-            }
-            @if (translators.Any(t => t is TranslatorExperience))
-            {
-                <th>ContactName</th>
-                <th>TotalExperienceYears</th>
-            }
+            <tr>
+                @if (translators.Any(t => t is TranslatorWithLanguage))
+                {
+                    <th>TranslatorId</th>
+                    <th>ContactName</th>
+                    <th>Email</th>
+                    <th>Language</th>
+                    <th>CategoryName</th>
+                }
+                @if (translators.Any(t => t is RatedTranslator))
+                {
+                    <th>ContactName</th>
+                    <th>Language</th>
+                    <th>AverageRating</th>
+                }
+                @if (translators.Any(t => t is TranslatorExperience))
+                {
+                    <th>ContactName</th>
+                    <th>TotalExperienceYears</th>
+                }
+            </tr>
         </thead>
         <tbody>
         @foreach (var translator in translators)
@@ -86,7 +90,8 @@ else
     </table>
 }
 @code {
-    private IEnumerable<TranslatorWithLanguage> translators;
+
+    private IEnumerable<Translator>? translators;
 
     protected override void OnInitialized()
     {
@@ -98,8 +103,15 @@ else
         translators = TranslatorService.GetTranslatorsViaDapper();
     }
 
-    // call GetTranslatorsWithRatings();
-    //
-    // call GetTranslatorCompetenceViaDapper();
+    protected void GetTranslatorsWithRatings()
+    {
+        translators = CompetenceService.GetTranslatorsWithRatings();
+    }
+
+    protected void GetTranslatorCompetence()
+    {
+        translators = EmploymentService.GetTranslatorCompetenceViaDapper();
+    }
+
 }
 
