Mega commit, previous uncommittet changes. Fundamental updates which we made at the university. Some updates to the SQL queries.

--- a/Project/DISProject/EasyTranslate/WebProject/Pages/CreateTask.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/CreateTask.razor
@@ -30,7 +30,7 @@
     <EditForm Model="@newTask" OnSubmit="@AddNewTask">
         <div class="row">
             <div class="col-md-6">
-                <label for="TaskType">Task Type:</label>
+                <label for="TaskType">Task Type (Oral/Written/Phone):</label>
                 <InputText id="TaskType" class="form-control" @bind-Value="newTask.TaskType" />
             </div>
         </div>
