--- a/Project/DISProject/EasyTranslate/WebProject/Pages/Translators.razor
+++ b/Project/DISProject/EasyTranslate/WebProject/Pages/Translators.razor
@@ -20,7 +20,7 @@
 <button class="btn btn-primary" @onclick="GetTranslatorsWithRatings">Click me</button>
 <button class="btn btn-primary" @onclick="OnInitialized">Reset</button>
 
-<h5>View all German Translators and their Total Experience in Years in descending order</h5>
+<h5>View most to least experienced German Translators </h5>
 <button class="btn btn-primary" @onclick="GetTranslatorCompetence">Click me</button>
 <button class="btn btn-primary" @onclick="OnInitialized">Reset</button>
 
